added loading state to images

--- a/work.html
+++ b/work.html
@@ -66,10 +66,10 @@
       <h2>Hey, I'm Adé O. Obayomi</h2>
       <h4>Currently, a product designer <b>@Forbes</b> with a focus on consumer experiences and internal tools. Work includes habit formation, growth, retention, and 0–1 products.</h4>
     </main>
-    <div class="landing-content">
-        <h2>Hey, I'm Adé O. Obayomi</h2>
-        <h4>Currently, a product designer <b>@Forbes</b> with a focus on consumer experiences and internal tools. Work includes habit formation, growth, retention, and 0–1 products.</h4>
-        <button id="actionButton">View Select Works</button>
+    <div class="project-content">
+      <img src="kl.gif" alt="A photo of a building that looks like Iron." loading="lazy">
+    <h3>Forbes: Explore</h3>
+    <h4>Currently, a product designer <b>@Forbes</b> with a focus on consumer experiences and internal tools. Work includes habit formation, growth, retention, and 0–1 products.</h4>
     </div>
   </div>
   <div class="content-divider">end of content</div>
