Add floating logo and welcome message; update project grid layout and styles

--- a/about.html
+++ b/about.html
@@ -13,6 +13,11 @@
   <!-- WebGL Canvas for particles -->
   <canvas id="particleCanvas"></canvas>
 
+  <div class="floating-logo">
+    <!-- Add your logo here -->
+    <img src="Notionme.png" alt="Logo" class="logo-image">
+  </div>
+
   <nav class="floating-toolbar">
     <button class="toolbar-hamburger" aria-label="Open menu">
       <span class="icon-hamburger">
