--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
   <!-- WebGL Canvas for particles -->
   <canvas id="particleCanvas"></canvas>
 
+  <div class="floating-logo">
+    <!-- Add your logo here -->
+    <img src="Notionme.png" alt="Logo" class="logo-image">
+    <div class="welcome-message">🫡 Welcome!</div>
+  </div>
+
   <nav class="floating-toolbar animate-toolbar">
     <button class="toolbar-hamburger" aria-label="Open menu">
       <span class="icon-hamburger">
@@ -61,7 +67,7 @@
   <div class="landing-grid">
     <main class="landing-content">
       <h2>Hey, I'm Adé O. Obayomi</h2>
-      <h4>Currently, a product designer <b>@Forbes</b> with a focus on consumer experiences and internal tools. Work includes habit formation, growth, retention, and 0–1 products.</h4>
+      <h4 style="color:#333">Product designer <b>@Forbes</b> with a focus on consumer experiences and internal tools. Work includes habit formation, growth, retention, and 0 to 1 products.</h4>
       <button id="actionButton">View Select Works</button>
     </main>
     <div class="landing-content">
