--- a/work.html
+++ b/work.html
@@ -15,6 +15,11 @@
   <!-- WebGL Canvas for particles -->
   <canvas id="particleCanvas"></canvas>
 
+  <div class="floating-logo">
+    <!-- Add your logo here -->
+    <img src="Notionme.png" alt="Logo" class="logo-image">
+  </div>
+
   <nav class="floating-toolbar">
     <button class="toolbar-hamburger" aria-label="Open menu">
       <span class="icon-hamburger">
@@ -61,13 +66,13 @@
   </nav>
 
   <div class="project-grid">
-    <main class="landing-content">
+    <main class="project-content">
         <img src="coverimage.png" alt="A photo of a building that looks like Iron." loading="lazy">
-      <h2>Hey, I'm Adé O. Obayomi</h2>
+      <h3>Forbes: Explore</h3>
       <h4>Currently, a product designer <b>@Forbes</b> with a focus on consumer experiences and internal tools. Work includes habit formation, growth, retention, and 0–1 products.</h4>
     </main>
     <div class="project-content">
-      <img src="kl.gif" alt="A photo of a building that looks like Iron." loading="lazy">
+      <img src="coverimage.png" alt="A photo of a building that looks like Iron." loading="lazy">
     <h3>Forbes: Explore</h3>
     <h4>Currently, a product designer <b>@Forbes</b> with a focus on consumer experiences and internal tools. Work includes habit formation, growth, retention, and 0–1 products.</h4>
     </div>
