--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
   <div class="landing-grid">
     <main class="landing-content">
       <h2>Hey, I'm Adé O. Obayomi</h2>
-      <h4 style="color:#333">Product designer <b>@Forbes</b> with a focus on consumer experiences and internal tools. Work includes habit formation, growth, retention, and 0 to 1 products.</h4>
+      <p>Product designer <b>@Forbes</b> with a focus on consumer experiences and internal tools. Work includes habit formation, growth, retention, and 0 to 1 products.</p>
       <button id="actionButton">View Select Works</button>
     </main>
     <div class="landing-content">
       <h3>Some Photos</h3>
-      <h4></h4>
+   
 
     
       <div class="photo-row">
@@ -84,19 +84,18 @@
   </div>
   <div class="content-divider">end of content</div>
   <div class="last-row">
-    <h3>Get In Touch</h3>
-    <h4></h4>
+    <h4>Get In Touch</h4>
     <div class="social-row">
       <button class="sec-btn" id="linkedinBtn" aria-label="LinkedIn">
           <!-- LinkedIn SVG -->
-          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
             <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
           </svg>
         </button>
 
         <button class="sec-btn" id="mailBtn" aria-label="Mail">
           <!-- Email SVG -->
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" transform="rotate(0 0 0)">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" transform="rotate(0 0 0)">
               <path d="M3.73586 4.5C2.7772 4.5 2.00008 5.27724 2.00025 6.2359L2.00024 6.26829C2.01058 6.81904 2.28193 7.33272 2.73193 7.65165L2.7428 7.65929L10.713 13.2171C11.3896 13.689 12.2608 13.7479 12.9861 13.3941C13.0897 13.3435 13.1903 13.2845 13.287 13.2171L21.2569 7.65949C21.7224 7.33485 21.9998 6.8031 21.9998 6.23554C21.9996 5.27702 21.2229 4.5 20.2644 4.5H3.73586Z" fill="#737373"/>
               <path opacity="0.4" d="M22.0001 8.96973L14.145 14.4473C12.8562 15.346 11.1438 15.346 9.85507 14.4473L2.00023 8.96991L2 17.2498C2 18.4924 3.00736 19.4998 4.25 19.4998H19.75C20.9926 19.4998 22 18.4924 22 17.2498L22.0001 8.96973Z" fill="#737373"/>
               </svg>
@@ -106,13 +105,13 @@
 
       <button class="sec-btn" id="githubBtn" aria-label="GitHub">
         <!-- GitHub SVG -->
-        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
             <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
           </svg>
       </button>
   
     </div>
-    <h4>© 2025  • Adé Obayomi</h4>
+    <p>© 2025 • Adé Obayomi</p>
   </div>
   <div id="lightbox" class="lightbox" tabindex="-1" aria-modal="true" role="dialog" style="display:none;">
     <div class="lightbox-content">
