Refactor about, explore, index, and work pages to unify footer styling; enhance content with a welcome message and improve mobile responsiveness for better user experience.

--- a/about.html
+++ b/about.html
@@ -16,6 +16,8 @@
   <div class="floating-logo">
     <!-- Add your logo here -->
     <img src="Notionme.png" alt="Logo" class="logo-image">
+    <div class="welcome-message">Get to know me 😎</div>
+
   </div>
 
   <nav class="floating-toolbar">
@@ -74,7 +76,7 @@
     <div class="landing-content">
       
       <h3>Some Photos</h3>
-      <br></br>
+     <p>Click to enlarge.</p>
      
       <div class="photo-row">
         <img src="GSM.png" alt="Speaking at the Forbes Gloabal Strategy Meeting." loading="lazy">
@@ -104,7 +106,7 @@
 
 
   <div id="QA">
-    <p style="color: #babbc2;" id="status">Prompts</p>
+    <p style="color: #7d7c83; font-size: 10px;" id="status">Prompts</p>
     <div id="radioPills">
       <div class="radio-pill" data-value="2">
         <span> Favorite Quote From Adé's Drama Teacher 🎭</span>
@@ -116,7 +118,7 @@
         <span>Skepta 📀</span>
       </div>
       <div class="radio-pill" data-value="4">
-        <span>Who is Adé's Celebrity Crush?</span>
+        <span>Adé's Biggest Fear?</span>
       </div>
     </div>
   </div>
@@ -130,7 +132,7 @@
     </div>
   </div>
 
-  <p style="color: #babbc2; font-size: 12px; text-align: center; margin-top: 16px;">Jarvis can make mistakes, but he's learning.</p>
+  <p style="color: #7d7c83; font-size: 12px; text-align: center; margin-top: 28px;">Jarvis can make mistakes, but he's learning.</p>
 
 
 
@@ -169,7 +171,7 @@
       </button>
   
     </div>
-    <p>© 2025 • Adé Obayomi</p>
+    <p style="color: #7d7c83; font-size: 12px;">© 2025 | Adé Obayomi</p>
   </div>
   <div id="lightbox" class="lightbox" tabindex="-1" aria-modal="true" role="dialog" style="display:none;">
   <div class="lightbox-content">
