Replace line break with a descriptive paragraph in the photo section of index.html to enhance user engagement.

--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
     </main>
     <div class="landing-content">
       <h3>Some Photos</h3>
-      <br></br>
-   
+   <p>Click to enlarge.</p>
       <div class="photo-row">
         <img src="Iron.JPG" alt="Building that look like iron." loading="lazy">
         <img src="Urban Pyramid.JPG" alt="Building that sort of looks like an Egyptian pyramid." loading="lazy">
