Update welcome message in about.html for clarity and adjust floating logo positioning in styles.css for improved responsiveness on smaller screens.

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   <div class="floating-logo">
     <!-- Add your logo here -->
     <img src="Notionme.png" alt="Logo" class="logo-image">
-    <div class="welcome-message">Get to know me 😎</div>
+    <div class="welcome-message">Get to know!</div>
 
   </div>
 
