Switch all HTML files to use index-new.js with working functionality

--- a/explore.html
+++ b/explore.html
@@ -333,7 +333,7 @@
       </div>
   </div>
   <div class="toolbar-scrim"></div>
-  <script src="index.js"></script>
+  <script src="index-new.js"></script>
   <script src="particles.js"></script>
   <script src="image-optimizer.js"></script>
 </body>
