--- a/about.html
+++ b/about.html
@@ -194,7 +194,7 @@
         </svg></button>
   </div>
 </div>
-  <script src="index-new.js"></script>
+  <script src="index.js"></script>
   <script src="particles.js"></script>
   <script src="image-optimizer.js"></script>
 </body>
