Fix HTML comment syntax in explore.html by removing unnecessary closing comment tag.

--- a/explore.html
+++ b/explore.html
@@ -120,7 +120,7 @@
     </div>
     
    
-  </div> -->
+  </div>
 
   <!-- Article Content -->
   <div id="article-content" class="article-layout" style="display: none;">
