Update image references in explore.html and work.html to use 'xplore.gif'; remove obsolete explore.gif file.

--- a/explore.html
+++ b/explore.html
@@ -209,7 +209,7 @@
 
       <!-- Hero Image -->
       <div class="content-image">
-        <img src="Explore.gif" alt="Forbes Explore interface showing personalized content recommendations" loading="lazy">
+        <img src="xplore.gif" alt="Forbes Explore interface showing personalized content recommendations" loading="lazy">
       </div>
 
       <h2 id="challenge">The Challenge</h2>
