--- a/work.html
+++ b/work.html
@@ -69,7 +69,7 @@
 
   <div class="project-grid">
     <main class="project-content">
-        <img src="Explore.gif" alt="A photo of a building that looks like Iron." loading="lazy">
+        <img src="xplore.gif" alt="A photo of a building that looks like Iron." loading="lazy">
         <div id="tagdiv">
           <span class="context-tag">0 → 1 Product Design</span>
           <span class="context-tag">User Research</span>
