Update button text to "View Recent Work" in index.html; implement button navigation to work.html in index.js; enhance Table of Contents scroll spy functionality for explore.html; add fade-in animation to project images in styles.css.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <main class="landing-content">
       <h2>Hey, I'm Adé O. Obayomi</h2>
       <p>Product designer <b>@Forbes</b> with a focus on consumer experiences and internal tools. Work includes habit formation, growth, retention, and 0 to 1 products.</p>
-      <button id="actionButton">View Select Works</button>
+      <button id="actionButton">View Recent Work</button>
     </main>
     <div class="landing-content">
       <h3>Some Photos</h3>
