--- a/work.html
+++ b/work.html
@@ -65,7 +65,7 @@
     </div>
   </nav>
 
-  <div style="margin:auto; text-align: center; margin-top: 100px;"><h2>Selected Work</h2></div>
+  <div style="margin:auto; text-align: center; margin-top: 100px;"><h2>Recent Work</h2></div>
 
   <div class="project-grid">
     <main class="project-content">
