Refactor explore.html and index.js to enhance user experience; add email copy functionality and improve image handling. Update styles.css for new email button styles and layout adjustments in results section.

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
      <p>Click to enlarge.</p>
      
       <div class="photo-row">
-        <img src="GSM.png" alt="Speaking at the Forbes Gloabal Strategy Meeting." loading="lazy">
+        <img src="GSM.png" alt="Speaking at the Forbes Global Strategy Meeting." loading="lazy">
         <img src="Le Moi.png" alt="Le Selfie." loading="lazy">
         <img src="Jordan.png" alt="NBA Watch Out." loading="lazy">
         <img src="Tiger.png" alt="Le Golf." loading="lazy">
