--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
       <h3>Some Photos</h3>
    <p>Click to enlarge.</p>
       <div class="photo-row">
-        <img src="Iron.JPG" alt="Building that look like iron." loading="lazy">
-        <img src="Urban Pyramid.JPG" alt="Building that sort of looks like an Egyptian pyramid." loading="lazy">
-        <img src="pixelDC.png" alt="DC Memorial in pixel" loading="lazy">
+        <img src="Iron.JPG" alt="Building that looks like iron." loading="lazy">
+        <img src="Urban Pyramid.JPG" alt="Building that looks like an Egyptian pyramid." loading="lazy">
+        <img src="pixelDC.png" alt="Washington Monument in pixel." loading="lazy">
       </div>
     </div>
   </div>
