Fix typo in explore.html: change "Represents" to "Represent" in section title for grammatical accuracy.

--- a/explore.html
+++ b/explore.html
@@ -228,7 +228,7 @@
 
       <div class="highlight-box">
         <h3>"Rethink News Consumption Patterns Amidst The Proliferation 
-          Of AI And Create A Homepage To Represents That."</h3>
+          Of AI And Create A Homepage To Represent That."</h3>
         
       </div>
 
