Refactor AI answer handling in index.js to support multiple responses; update about.html for improved prompt clarity and styles.css to add a blur effect utility class for enhanced interactivity.

--- a/about.html
+++ b/about.html
@@ -107,17 +107,13 @@
 
 
   <div id="QA">
-    <p style="color: #7d7c83; font-size: 10px;" id="status">Prompts</p>
+    <p style="color: #555555; font-size: 10px;" id="status">Prompts</p>
     <div id="radioPills">
       <div class="radio-pill" data-value="2">
-        <span> Favorite Quote From Adé's Drama Teacher 🎭</span>
+        <span>🗣️ Favorite Quotes</span>
       </div>
-      <div class="radio-pill" data-value="1">
-        <span>What Makes A Good Product?</span>
-      </div>
-      <div class="radio-pill" data-value="3">
-        <span>Skepta 📀</span>
-      </div>
+
+      
       <div class="radio-pill" data-value="4">
         <span>Adé's Biggest Fear?</span>
       </div>
