--- a/explore.html
+++ b/explore.html
@@ -177,7 +177,7 @@
             </g>
             </svg>
             
-          <span><strong>Team:</strong> Director of AI Product, 2 Engineers & Me</span>
+          <span><strong>Team:</strong> 2 Engineers, Principal PM of AI products, & Me</span>
         </div>
         <div class="feature-item">
           <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" transform="rotate(0 0 0)">
@@ -204,7 +204,7 @@
 
       <p class="lead-paragraph">
         This project didn’t originate from the company’s typical roadmap. But as a digital media company, we had to respond to the times. 
-        Long-form articles is falling out of favor with younger millennials and Gen Z and AI was only going to accelerate this trend further.
+        Long-form articles were falling out of favor with younger millennials and Gen Z and AI was only going to accelerate this trend further.
       </p>
 
       <br> 
@@ -222,7 +222,7 @@
       <h2 id="challenge">The Challenge</h2>
       <p class="lead-paragraph">
         These reasons made the shift away from long-form content an even more urgent challenge to face as a company. 
-        As a response to that challenge, a small team was hand-picked by our Chief Innovation Officer and the task she presented to us was:
+        As a response to that challenge, a small team was hand-picked by our Chief Product Officer and the task she presented to us was:
 
       </p>
 
