--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
     </div>
   </nav>
 
-  <div class="landing-grid">
+  <div class="about-grid">
     <main class="landing-content">
      
       <h3>Bio</h3>
