--- a/work.html
+++ b/work.html
@@ -69,7 +69,10 @@
 
   <div class="project-grid">
     <main class="project-content">
-        <img src="xplore.gif" alt="A photo of a building that looks like Iron." loading="lazy">
+        <div class="gif-container">
+          <div class="gif-loader"></div>
+          <img src="xplore.gif" alt="A photo of a building that looks like Iron." loading="lazy" class="gif-loading">
+        </div>
         <div id="tagdiv">
           <span class="context-tag">0 → 1 Product Design</span>
           <span class="context-tag">User Research</span>
@@ -79,7 +82,10 @@
       <p>Rethinking information consumption habits amidst the proliferation of AI.</p>
     </main>
     <div class="project-content">
-      <img src="Clvye.gif" alt="A photo of a building that looks like Iron." loading="lazy">
+      <div class="gif-container">
+        <div class="gif-loader"></div>
+        <img src="Clvye.gif" alt="A photo of a building that looks like Iron." loading="lazy" class="gif-loading">
+      </div>
       <div id="tagdiv">
         <span class="context-tag">Side Project</span>
         <span class="context-tag">AI</span>
