Enhance SEO and metadata across multiple HTML files; update titles and descriptions for better clarity and search visibility; remove unused image files; adjust styles for improved layout and readability in styles.css.

--- a/about.html
+++ b/about.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About</title>
+  <title>About Adé Obayomi - Product Designer & UX Researcher</title>
+  <meta name="description" content="Learn about Adé Obayomi, a product designer and UX researcher with expertise in AI-powered products, user experience design, and digital innovation at Forbes and other leading companies.">
+  <meta name="keywords" content="Ade Obayomi, Adé Obayomi, about, product designer, UX designer, background, experience, Forbes, AI products">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://adeobayomi.com/about.html">
   <link rel="icon" type="image/png" href="Notionme.png">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
