--- a/index.html
+++ b/index.html
@@ -3,7 +3,50 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Adé Obayomi</title>
+  <title>Adé Obayomi - Product Designer & UX Researcher</title>
+  <meta name="description" content="Adé Obayomi is a product designer and UX researcher specializing in AI-powered products, user experience design, and digital innovation. Portfolio showcasing work at Forbes and other leading companies.">
+  <meta name="keywords" content="Ade Obayomi, Adé Obayomi, product designer, UX designer, user experience, UI design, product design, Forbes, AI products, user research">
+  <meta name="author" content="Adé Obayomi">
+  
+  <!-- Open Graph / Social Media -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Adé Obayomi - Product Designer & UX Researcher">
+  <meta property="og:description" content="Product designer specializing in AI-powered products and user experience design. See my work at Forbes and other leading companies.">
+  <meta property="og:image" content="coverimage.png">
+  <meta property="og:url" content="https://adeobayomi.com">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Adé Obayomi - Product Designer">
+  <meta name="twitter:description" content="Product designer specializing in AI-powered products and user experience design.">
+  <meta name="twitter:image" content="coverimage.png">
+  
+  <!-- Schema.org structured data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Adé Obayomi",
+    "alternateName": "Ade Obayomi",
+    "jobTitle": "Product Designer",
+    "description": "Product designer and UX researcher specializing in AI-powered products and digital innovation",
+    "url": "https://adeobayomi.com",
+    "sameAs": [
+      "https://linkedin.com/in/adeobayomi",
+      "https://github.com/adeobayomi"
+    ],
+    "knowsAbout": ["Product Design", "UX Research", "AI Products", "User Experience", "Digital Innovation"],
+    "worksFor": {
+      "@type": "Organization",
+      "name": "Forbes"
+    }
+  }
+  </script>
+  
+  <!-- Additional SEO -->
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://adeobayomi.com">
+  
   <!-- Force deploy -->
   <link rel="icon" type="image/png" href="Notionme.png">
   <link rel="stylesheet" href="styles.css">
@@ -17,7 +60,7 @@
 
   <div class="floating-logo">
     <!-- Add your logo here -->
-    <img src="Notionme.png" alt="Logo" class="logo-image">
+    <img src="Notionme.png" alt="Adé Obayomi Logo" class="logo-image">
     <div class="welcome-message">🫡 Welcome!</div>
   </div>
 
