--- a/work.html
+++ b/work.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Adé's Work</title>
+  <title>Adé Obayomi's Work - Product Design Portfolio</title>
+  <meta name="description" content="View Adé Obayomi's product design work including Forbes Explore, AI-powered products, and user experience design projects.">
+  <meta name="keywords" content="Ade Obayomi work, Adé Obayomi portfolio, product design projects, Forbes Explore, UX design">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://adeobayomi.com/work.html">
   <link rel="icon" type="image/png" href="Notionme.png">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -65,7 +69,7 @@
     </div>
   </nav>
 
-  <div style="margin:auto; text-align: center; margin-top: 100px;"><h2>Recent Work</h2></div>
+  <div style="margin:auto; text-align: center; margin-top: 100px;"><h1>Adé Obayomi's Recent Work</h1></div>
 
   <div class="project-grid">
     <main class="project-content">
