--- a/work.html
+++ b/work.html
@@ -69,7 +69,7 @@
     </div>
   </nav>
 
-  <div style="margin:auto; text-align: center; margin-top: 100px;"><h1>Adé Obayomi's Recent Work</h1></div>
+  <div style="margin:auto; text-align: center; margin-top: 100px;"><h1>Recent Work</h1></div>
 
   <div class="project-grid">
     <main class="project-content">
