Update index.html to refine SEO metadata; simplify title and descriptions; change canonical URL and social media links for consistency; and remove UX researcher references for a more focused presentation of skills.

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Adé Obayomi - Product Designer & UX Researcher</title>
-  <meta name="description" content="Adé Obayomi is a product designer and UX researcher specializing in AI-powered products, user experience design, and digital innovation. Portfolio showcasing work at Forbes and other leading companies.">
-  <meta name="keywords" content="Ade Obayomi, Adé Obayomi, product designer, UX designer, user experience, UI design, product design, Forbes, AI products, user research">
+  <title>Adé Obayomi - Product Designer</title>
+  <meta name="description" content="Adé Obayomi is a product designer specializing in AI-powered products, user experience design, and digital innovation. Portfolio showcasing work at Forbes and other leading companies.">
+  <meta name="keywords" content="Ade Obayomi, Adé Obayomi, product designer, UX designer, user experience, UI design, product design, Forbes, AI products">
   <meta name="author" content="Adé Obayomi">
   
   <!-- Open Graph / Social Media -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Adé Obayomi - Product Designer & UX Researcher">
-  <meta property="og:description" content="Product designer specializing in AI-powered products and user experience design. See my work at Forbes and other leading companies.">
+  <meta property="og:title" content="Adé Obayomi - Product Designer">
+  <meta property="og:description" content="Product designer specializing in AI-powered products and user experience design. See my work at Forbes.">
   <meta property="og:image" content="coverimage.png">
-  <meta property="og:url" content="https://adeobayomi.com">
+  <meta property="og:url" content="https://adeobayomi.me">
   
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
@@ -29,13 +29,13 @@
     "name": "Adé Obayomi",
     "alternateName": "Ade Obayomi",
     "jobTitle": "Product Designer",
-    "description": "Product designer and UX researcher specializing in AI-powered products and digital innovation",
-    "url": "https://adeobayomi.com",
+    "description": "Product designer specializing in AI-powered products and digital innovation",
+    "url": "https://adeobayomi.me",
     "sameAs": [
-      "https://linkedin.com/in/adeobayomi",
-      "https://github.com/adeobayomi"
+      "https://linkedin.com/in/ade98",
+      "https://github.com/elapache98"
     ],
-    "knowsAbout": ["Product Design", "UX Research", "AI Products", "User Experience", "Digital Innovation"],
+    "knowsAbout": ["Product Design", "AI Products", "User Experience", "Digital Innovation"],
     "worksFor": {
       "@type": "Organization",
       "name": "Forbes"
@@ -45,7 +45,7 @@
   
   <!-- Additional SEO -->
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://adeobayomi.com">
+  <link rel="canonical" href="https://adeobayomi.me">
   
   <!-- Force deploy -->
   <link rel="icon" type="image/png" href="Notionme.png">
