Update about.html and work.html to simplify page titles for clarity and focus on product design.

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Adé Obayomi - Product Designer & UX Researcher</title>
+  <title>About Adé Obayomi - Product Designer</title>
   <meta name="description" content="Learn about Adé Obayomi, a product designer and UX researcher with expertise in AI-powered products, user experience design, and digital innovation at Forbes and other leading companies.">
   <meta name="keywords" content="Ade Obayomi, Adé Obayomi, about, product designer, UX designer, background, experience, Forbes, AI products">
   <meta name="robots" content="index, follow">
