--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Adé Obayomi's Work - Product Design Portfolio</title>
+  <title>Adé Obayomi's Work - Portfolio</title>
   <meta name="description" content="View Adé Obayomi's product design work including Forbes Explore, AI-powered products, and user experience design projects.">
   <meta name="keywords" content="Ade Obayomi work, Adé Obayomi portfolio, product design projects, Forbes Explore, UX design">
   <meta name="robots" content="index, follow">
