Update explore.html to add margin to highlight box for improved spacing; refactor index.js to restore local development bypass logic for better testing experience.

--- a/explore.html
+++ b/explore.html
@@ -230,7 +230,7 @@
 
       </p>
 
-      <div class="highlight-box">
+      <div class="highlight-box" style="margin-bottom:24px;">
         <h3>"Rethink News Consumption Patterns Amidst The Proliferation 
           Of AI And Create A Homepage To Represent That."</h3>
         
