Update index.html to enhance the presentation of the product designer title by adding a class and adjusting the font size for improved visual emphasis.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <div class="landing-grid">
     <main class="landing-content">
       <h1>Hey, I'm<br>Adé O. Obayomi</h1>
-      <p>Product designer <b>@Forbes</b> with a focus on consumer experiences and internal tools. Work includes habit formation, growth, retention, and 0 to 1 products.</p>
+      <p>Product designer <b class="context-tag" style="font-size:11px;"><strong>@Forbes</strong></b> with a focus on consumer experiences and internal tools. Work includes habit formation, growth, retention, and 0 to 1 products.</p>
       <button id="actionButton">View Recent Work</button>
     </main>
     <div class="landing-content">
