--- a/explore.html
+++ b/explore.html
@@ -247,8 +247,8 @@
   <h2 id="results">Results & Impact</h2>
   <ul class="results-list">
     <li>
-      On April 1st 2025, <b>Forbes:Explore</b>, a news briefing experience powered by AI launched in a silent BETA through a LinkedIn post from Forbes' CTO.</li>
-    <li>In its first month, Explore had over 1k active users and more than thripled that by month six; with users spending an average of 90+ seconds on the page.</li>
+      On April 1st 2025, <b>Forbes:Explore</b>, a news briefing experience powered by AI launched in a silent Beta through a LinkedIn post by Forbes' CTO.</li>
+    <li>In 4 months, Explore had over 10k users; with users spending an average of 90+ seconds on the page.</li>
     <li>The launch also gave the team and I the opportunity to speak about Forbes Explore at the company wide Global Strategy Meeting 🤠.</li>
   </ul>
   <div class="results-divider"></div>
@@ -264,11 +264,11 @@
     </div>
   </div>
   <div class="results-divider"></div>
-  <h3>A Few Months Into Launch, Explore Had Achieved:</h3>
+  <h3>At Its Peak, Explore Had Achieved:</h3>
   <div class="metrics-grid">
     <div class="metric">
       <div class="metric-number">a 4x Increase</div>
-      <div class="metric-label">in average user engagement when compared to the legacy* homepage.</div>
+      <div class="metric-label">in average user engagement when compared to the legacy homepage*.</div>
     </div>
     <div class="metric">
       <div class="metric-number">2+ Minutes</div>
@@ -328,9 +328,9 @@ In contrast, User 2 represented a more passive audience: someone who primarily e
 <div class="code-blocks-grid">
         <div class="highlight-box">
           <h3>“ It’s a normal reaction of mine to go to the comment section and see what people are saying. 
-            Sometimes it’s meaningless but sometimes it brings another perspective or summary. "</h3>
+            Sometimes it’s meaningless but sometimes it brings another perspective or <span style="text-decoration:underline;">summary</span>.</h3>
 
-            <p style="font-size: 16px;">User 1 in relation to how they relate to articles.</p>
+            <p style="font-size: 16px;">User 1 in relation to how they interact with articles.</p>
 
           </div>
 
@@ -351,19 +351,19 @@ In contrast, User 2 represented a more passive audience: someone who primarily e
       <!-- Code/Technical Example -->
       <div class="code-blocks-grid">
         <div class="code-block">
-          <p style="font-size: 14px; text-transform: uppercase; color: #947b57;">Insight 1</p>
+          <p style="font-size: 12px; text-transform: uppercase; color: #947b57;">Insight 1</p>
           <h4 class="code-block-title">
             <span class="code-block-icon"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" transform="rotate(0 0 0)">
               <path opacity="0.4" d="M7.41016 2C7.05632 2 6.75061 2.24731 6.6767 2.59336L4.4267 13.1285C4.37942 13.3499 4.43468 13.5809 4.57707 13.7569C4.71947 13.9329 4.93376 14.0352 5.16016 14.0352H10.6842L10.0637 21.1852C10.0338 21.5302 10.244 21.8509 10.5724 21.9611C10.9008 22.0712 11.2619 21.9422 11.4461 21.6489L19.4749 8.86368C19.6201 8.63255 19.6282 8.34081 19.4962 8.10195C19.3641 7.86309 19.1127 7.71482 18.8398 7.71482L13.1876 7.71482L15.368 3.06863C15.477 2.83632 15.4597 2.5644 15.3221 2.3478C15.1845 2.1312 14.9457 2 14.6891 2H7.41016Z" fill="#947b57"/>
               <path d="M6.6767 2.59336C6.75061 2.24731 7.05632 2 7.41016 2H14.6891C14.9457 2 15.1845 2.1312 15.3221 2.3478C15.4597 2.5644 15.477 2.83632 15.368 3.06863L13.1876 7.71482L18.8398 7.71482C19.1127 7.71482 19.3641 7.86309 19.4962 8.10195C19.6282 8.34081 19.6201 8.63255 19.4749 8.86368L11.4461 21.6489C11.2619 21.9422 10.9008 22.0712 10.5724 21.9611C10.244 21.8509 10.0338 21.5302 10.0637 21.1852L10.6842 14.0352H5.16016C4.93376 14.0352 4.71947 13.9329 4.57707 13.7569C4.43468 13.5809 4.37942 13.3499 4.4267 13.1285L6.6767 2.59336ZM8.0169 3.5L6.08725 12.5352H11.5021C11.7123 12.5352 11.9128 12.6234 12.0549 12.7783C12.1969 12.9332 12.2675 13.1406 12.2493 13.35L11.8264 18.2226L17.4832 9.21482L12.0071 9.21482C11.7505 9.21482 11.5117 9.08362 11.3741 8.86702C11.2365 8.65042 11.2192 8.3785 11.3282 8.14619L13.5086 3.5H8.0169Z" fill="#947b57"/>
               </svg>
               </span>
-           Bite Sized, Quick Delivery News
+           Bite Size, Quick Delivery News
           </h4>
-          <p>User 2’s quote suggests they value speed and brevity over long-form reading that today’s model of digital publishing supports in the form of dense articles.</p>
+          <p>User 2’s quote suggests they value speed and brevity over long-form reading that the current model of digital publishing supports by the way of dense articles.</p>
         </div>
         <div class="code-block">
-          <p style="font-size: 14px; text-transform: uppercase; color: #947b57;">Insight 2</p>
+          <p style="font-size: 12px; text-transform: uppercase; color: #947b57;">Insight 2</p>
           <h4 class="code-block-title">
             <span class="code-block-icon">  <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" transform="rotate(0 0 0)">
               <path d="M8.80437 4.10156C6.7626 4.10156 5.10742 5.75674 5.10742 7.79851C5.10742 9.84027 6.7626 11.4955 8.80437 11.4955C10.8461 11.4955 12.5013 9.84027 12.5013 7.79851C12.5013 5.75674 10.8461 4.10156 8.80437 4.10156Z" fill="#947b57"/>
@@ -378,12 +378,12 @@ In contrast, User 2 represented a more passive audience: someone who primarily e
               Reader to Reader Perspectives
           </h4>
           <p>
-            User 1 valued the comment section as a social layer; using others’ takes for context, validation, and quick summaries beyond the article itself.</p>
+            User 1 valued browisng the comment section as a social layer; using others’ takes for context, validation, and quick summaries beyond the article itself.</p>
         </div>
       </div>
 
       <div class="code-block">
-        <p style="font-size: 14px; text-transform: uppercase; color: #947b57;">Insight 3</p>
+        <p style="font-size: 12px; text-transform: uppercase; color: #947b57;">Insight 3</p>
         <h4 class="code-block-title">
           <span style="margin-bottom: -8px;"> <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" transform="rotate(0 0 0)">
             <g opacity="0.4">
@@ -397,7 +397,7 @@ In contrast, User 2 represented a more passive audience: someone who primarily e
             Low Friction Engagement
         </h4>
         <p>
-          Both users favored <b>effortless information consumption</b>: User 1 quickly scanned multiple bites, while User 2 scrolled comments to avoid the cognitive load of full articles cluttered with ads and distractions.</p></div>
+          Both users favored <b>effortless information consumption</b>: User 2 quickly scanned multiple bites, while User 1 scrolled through comments to avoid full articles cluttered with ads and distractions.</p></div>
 <br>
 <p style="text-transform: uppercase; font-size:14px; color:#5b4b34">From here, we created this How Might We Question: <br> <p class="'lead-paragraph" style="font-size:18px;">How might we create a fast, snackable news experience enriched by peer commentary,<b> where getting the gist of many stories feels more approachable than a deep dive into one?</b></p>  <br>    
      
