Refine content in explore.html for clarity and engagement, improving sentence structure and flow. Adjust phrasing for consistency and readability throughout the document.

--- a/explore.html
+++ b/explore.html
@@ -206,8 +206,8 @@
       <h2 id="introduction">Introduction: Setting the scene</h2>
 
       <p class="lead-paragraph">
-        This initiative didn’t originate from the company’s typical roadmap but as a digital media company, we had to respond to the times. 
-        Long-form articles were falling out of favor with younger generations and AI was only going to accelerate this trend further.
+        This initiative didn’t originate from the company’s typical roadmap. But as a digital media company, we had to respond to the times. 
+        Long-form articles were falling out of favor with younger generations and AI was going to accelerate this trend further.
       </p>
 
 <br>
@@ -224,7 +224,7 @@
 
       <h2 id="challenge">The Challenge</h2>
       <p>
-        These reasons, combined with the rise of AI, made the shift away from long-form content an even more urgent challenge to face as a company.
+        These reasons, combined with the rise of AI, made the shift away from long-form content a much more urgent challenge to face as a company.
         <br></br>
        As a response, a small team was hand-picked by our Chief Product Officer and the task she presented to us was:
 
@@ -293,7 +293,7 @@
         Given the broad challenge of reimagining information consumption for a modern publishing media company:</p>
 
         <p class="lead-paragraph">
-          The team had no shortage of directions we could approach the problem with; but one goal united us from the start, <b>to build a delightful, AI-first reading experience for news.</b>
+          The team had no shortage of directions we could approach the problem with but one goal united us from the start, <b>to build a delightful, AI-first reading experience for news.</b>
          
 </p>
 
@@ -324,7 +324,7 @@ In contrast, User 2 represented a more passive audience: someone who primarily e
 
       <h3>Highlighted Quotes</h3>
       <p>
-        Across both user types, a common sentiment was inferred by the way of these two quotes: </p>
+        Across both user types, a common sentiment was inferred by way of these two quotes: </p>
 <div class="code-blocks-grid">
         <div class="highlight-box">
           <h3>“ It’s a normal reaction of mine to go to the comment section and see what people are saying. 
@@ -360,7 +360,7 @@ In contrast, User 2 represented a more passive audience: someone who primarily e
               </span>
            Bite Size, Quick Delivery News
           </h4>
-          <p>User 2’s quote suggests they value speed and brevity over long-form reading that the current model of digital publishing supports by the way of dense articles.</p>
+          <p>User 2’s quote suggests they value speed and brevity over long-form reading that the current model of digital publishing supports by way of dense articles.</p>
         </div>
         <div class="code-block">
           <p style="font-size: 12px; text-transform: uppercase; color: #947b57;">Insight 2</p>
@@ -378,7 +378,7 @@ In contrast, User 2 represented a more passive audience: someone who primarily e
               Reader to Reader Perspectives
           </h4>
           <p>
-            User 1 valued browisng the comment section as a social layer; using others’ takes for context, validation, and quick summaries beyond the article itself.</p>
+            User 1 valued browsing the comment section as a social layer; using others’ takes for context, validation, and quick summaries beyond the article itself.</p>
         </div>
       </div>
 
