Update image source in explore.html and adjust CSS for content images to ensure full-width display. This enhances visual consistency and improves the overall layout of the content presentation.

--- a/explore.html
+++ b/explore.html
@@ -406,7 +406,7 @@ In contrast, User 2 represented a more passive audience: someone who primarily e
       
        <!-- Hero Image -->
        <div class="content-image">
-        <img src="xplore.gif" alt="Forbes Explore interface showing personalized content recommendations" loading="lazy">
+        <img src="Feature Intro Thumbnail.png" alt="Forbes Explore interface showing personalized content recommendations" loading="lazy">
       </div>
       <p>
         We designed Forbes Explore as an AI-powered content discovery engine that learns from user behavior, reading patterns, and preferences to surface highly relevant articles, authors, and topics.
