Update explore.html to replace "CIO/CDO" with "Chief Digital & Information Officer" for clarity and consistency in terminology.

--- a/explore.html
+++ b/explore.html
@@ -253,7 +253,7 @@
   <ul class="results-list">
     <li>
       On April 1st, 2025, Forbes:Explore, an AI-powered news briefing 
-      experience launched in a silent beta through a LinkedIn post by Forbes’ CIO/CDO.</li>
+      experience launched in a silent beta through a LinkedIn post by Forbes’ Chief Digital & Information Officer.</li>
     <li>In 4 months, Explore had over 10k users; with users spending an average of 90+ seconds on the page.</li>
     <li>The launch also gave the team and I the opportunity to speak about Explore at the company wide Global Strategy Meeting.</li>
   </ul>
@@ -262,7 +262,7 @@
   <div class="image-grid">
     <div class="image-item">
       <img src="GSM.png" alt="User research and persona development" loading="lazy">
-      <p class="image-caption">Speaking at the Global Strategy Meeting with the Explore team and Forbes' CIO/CDO.</p>
+      <p class="image-caption">Speaking at the Global Strategy Meeting with the Explore team and Forbes' Chief Digital & Information Officer.</p>
     </div>
     <div class="image-item">
       <img src="Explore launch.jpg" alt="Explore launch" loading="lazy">
