Update explore.html to enhance text clarity and formatting; introduce new feature section for "Social Commentary Layer" including polls, and adjust existing content for improved readability.

--- a/explore.html
+++ b/explore.html
@@ -416,11 +416,11 @@
         </h4>
         <p>
           Both users favored <b>effortless information consumption</b>: User 2 quickly scanned multiple bites, 
-          while User 1 scrolled through comments for a "cleaner reading experience" avoiding the actual 
-          article surface, which was often cluttered with ads and other distractions 
+          while User 1 scrolled through comments opting for a "cleaner reading experience" in an attempt to avoid the actual 
+          article, which was often cluttered with ads and other distractions 
           like recommended content and recirculation units.</p></div>
 <br>
-<p style="text-transform: uppercase; font-size:14px; color:#5b4b34">From here, we created this How Might We Question: <br> <p class="'lead-paragraph" style="font-size:18px;">How might we create a fast, snackable news experience enriched by peer commentary,<b> where getting the gist of many stories feels more approachable than a deep dive into one?</b></p>  <br>    
+<p style="text-transform: uppercase; font-size:14px; color:#5b4b34"><b>From here, we created this How Might We Question:</b> <br> <p class="'lead-paragraph" style="font-size:18px;">How might we create a fast, snackable news experience enriched by peer commentary,<b> where getting the gist of many stories feels more approachable than a deep dive into one?</b></p>  <br>    
 
 
       <h2 id="key-features">Key Features</h2>
@@ -446,7 +446,7 @@
   <div class="feature-card">
     <div class="feature-content">
       <p>
-      <h3 class="feature-headline">Reader Reactions: Social Commentary Layer</h3>
+      <h3 class="feature-headline">Social Commentary Layer: Reader Reactions</h3>
       <p class="feature-description">
 Reader Reactions was designed to give users an extrinsic motivation to engage with content 
 they might typically overlook. This blend of social influence and gamified feedback made 
@@ -455,6 +455,20 @@ digests more enaged with, aligning user psychology with business goals.
     </div>
     <div class="feature-image image-item">
       <img src="Reader Reaction.png" alt="Bite-sized news interface" loading="lazy">
+    </div>
+  </div>
+
+
+  <div class="feature-card">
+    <div class="feature-content">
+      <p>
+      <h3 class="feature-headline">Social Commentary Layer: Polls</h3>
+      <p class="feature-description">
+        Polls added a low-effort social layer letting users quickly share their take on a topic and instantly see how it stacked up against public opinion. 
+        It was a subtle but effective way to break people out of their echo chambers and spark curiosity beyond their usual perspective. </p>
+    </div>
+    <div class="feature-image image-item">
+      <img src="AI polls flow.png" alt="Bite-sized news interface" loading="lazy">
     </div>
   </div>
 
