Update explore.html to clarify the description of the "Social Commentary Layer" by specifying that polls are generated from article content, enhancing user understanding of the feature's purpose.

--- a/explore.html
+++ b/explore.html
@@ -464,7 +464,7 @@ digests more enaged with, aligning user psychology with business goals.
       <p>
       <h3 class="feature-headline">Social Commentary Layer: Polls</h3>
       <p class="feature-description">
-        Polls added a low-effort social layer letting users quickly share their take on a topic and instantly see how it stacked up against public opinion. 
+        Polls were generated from article content and  added a low-effort social layer letting users quickly share their take on a topic and instantly see how it stacked up against public opinion. 
         It was a subtle but effective way to break people out of their echo chambers and spark curiosity beyond their usual perspective. </p>
     </div>
     <div class="feature-image image-item">
