Add .gitignore to exclude JS and media files

--- a/explore.html
+++ b/explore.html
@@ -207,10 +207,10 @@
       <h2 id="introduction" class="explore-animate">Introduction: Setting the scene</h2>
 
       <p class="lead-paragraph">
-        This wasn’t something that came out of our usual roadmap; 
+        This wasn’t an initiative that came out of the usual roadmap 
         but as a digital media company, we had to keep up with the times. 
         Younger audiences were moving away from long-form articles, 
-        and with AI in the mix, that shift was only speeding up.
+        and with AI in the mix, there wasa a need to design a new economic engine before the current one erodes.
       </p>
 
 <br>
@@ -324,7 +324,9 @@
 
       <p>
         User 1 was a power reader. They subscribed to both The Wall Street Journal and their local news outlet, 
-        CBC, consuming news daily with intentionality. In contrast, User 2 represented a more 
+        CBC, consuming news daily with intentionality. </p>
+        
+        <p>In contrast, User 2 represented a more 
         passive audience: someone who primarily encounters news through the MSN app 
         on their laptop and by chance, through Instagram or X (formerly Twitter).
 </p>
@@ -376,7 +378,7 @@
               </span>
            Bite Size, Quick Delivery News
           </h4>
-          <p>User 2's quote suggests they value speed and brevity over 
+          <p>User 2's quote suggested they valued speed and brevity over 
             the current model of digital publishing that supports long-form reading by way of dense articles.</p>
         </div>
       <div class="code-block">
@@ -395,8 +397,8 @@
               Reader to Reader Perspectives
           </h4>
           <p>
-            User 1 valued browsing the comment section as a social layer; using others' 
-            takes for context, validation, and quick summaries beyond the article itself.</p>
+            User 1 valued browsing the comment section as a social layer; using other reader's 
+            takes for context, validation or different perspectives, and quick summaries beyond the article itself.</p>
         </div>
       </div>
 
